--- a/jspWithServlet/.project
+++ b/jspWithServlet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jspWithServlet</name>
+	<name>Button Readings in jsp</name>
 	<comment></comment>
 	<projects>
 	</projects>
